<resources>
    <string name="app_name">Fragments</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="detail_info">Detail info</string>
    <string name="CheckBoxText">Принять соглашения</string>
    <string name="loginButton">LOG IN</string>
    <string name="detail_1">Detail 1</string>
    <string name="detail_2">Detail 2</string>
    <string name="detail_3">Detail 3</string>
    <string name="information_s_detail">Information\'s detail</string>
</resources>